[gd_scene load_steps=11 format=3 uid="uid://pltwuyymn3cn"]

[ext_resource type="Script" path="res://game_entry.gd" id="1_k30vb"]
[ext_resource type="PackedScene" uid="uid://cxci7ctkywm45" path="res://splash/trash_entity/trash_entity_splash.tscn" id="2_eu72t"]
[ext_resource type="PackedScene" uid="uid://dswcv711cp8pt" path="res://main_level.tscn" id="2_pvwe0"]
[ext_resource type="PackedScene" uid="uid://8wu8vnmbq5f5" path="res://main_menu.tscn" id="3_l4ylh"]
[ext_resource type="PackedScene" uid="uid://bqccfifrooo67" path="res://splash/people_who_hate_games/people_who_hate_games_splash.tscn" id="3_ll6r5"]
[ext_resource type="PackedScene" uid="uid://fw74pdadm6ca" path="res://saved_text.tscn" id="5_dt6rn"]
[ext_resource type="PackedScene" uid="uid://cd61dwt110dxr" path="res://intro_cutscene_2.tscn" id="5_p2s7e"]
[ext_resource type="PackedScene" uid="uid://cch75rtm2opaa" path="res://outro_cutscene.tscn" id="6_udoor"]
[ext_resource type="PackedScene" uid="uid://dmh1wy1nimnw8" path="res://credits.tscn" id="7_pn1nm"]
[ext_resource type="PackedScene" uid="uid://bptldyp4hvog2" path="res://controls.tscn" id="8_bqtrb"]

[node name="GameEntry" type="Node"]
script = ExtResource("1_k30vb")
splash_screen_scenes = Array[PackedScene]([ExtResource("2_eu72t"), ExtResource("3_ll6r5")])
main_level_scene = ExtResource("2_pvwe0")

[node name="Saved Text" parent="." instance=ExtResource("5_dt6rn")]

[node name="MainMenu" parent="." instance=ExtResource("3_l4ylh")]
visible = false

[node name="IntroCutscene" parent="." instance=ExtResource("5_p2s7e")]
visible = false

[node name="OutroCutscene" parent="." instance=ExtResource("6_udoor")]
visible = false

[node name="Credits" parent="." instance=ExtResource("7_pn1nm")]
visible = false

[node name="Controls" parent="." instance=ExtResource("8_bqtrb")]
visible = false

[connection signal="load_game" from="MainMenu" to="." method="_on_load_game"]
[connection signal="start_game" from="MainMenu" to="." method="_on_main_menu_start_game"]
[connection signal="cutscene_complete" from="IntroCutscene" to="." method="_on_intro_cutscene_cutscene_complete"]
[connection signal="cutscene_complete" from="OutroCutscene" to="." method="_on_outro_cutscene_cutscene_complete"]
[connection signal="finished" from="Controls" to="." method="_on_controls_finished"]
